# Multi-threaded-Server-Project

./: CMakeLists.txt  client  client.cpp  client.h  eval.py  example.txt  readme.MD  server  server.cpp  server.h
Client/: client.cpp
Results/Apache_Server/: Apache_httperf_3000_results.xlsx  Apache_httperf_5000_results.xlsx  Apache_httperf_8000_results.xlsx
Results/Designed_Server/: httperf_3000_results.xlsx  httperf_5000_results.xlsx  httperf_8000_results.xlsx
Server/: Trial.html  Trial2.html  index.html  server.cpp
sample_socket/: client  server  socket_client.cpp  socket_server.cpp
